# gegelati-apps

./: .gitignore  .travis.yml  README.md
.github/workflows/: ci.yml
cicids/: CMakeLists.txt  params.json
cicids/src/: cicids.cpp  cicids.h  main.cpp
cicids_detect/: CMakeLists.txt  params.json
cicids_detect/src/: cicids.cpp  cicids.h  main.cpp
cifar10/: CMakeLists.txt  launch_test.py  params.json
cifar10/res/: tmp_file.md
cifar10/src/: cifar.cpp  cifar.h  main.cpp
cifar10_1/: CMakeLists.txt  brute_force_metrics.py  changelog  launch_test.py  params.json
cifar10_1/res/: MCC_TPG_imbalanced.md  basic_tpg_imballanced_ratio.md  brute_force_tmp.md  result.md  result_brute_force.md  result_kappa_against_all.md  tmp_file.md
cifar10_1/src/: cifar.cpp  cifar.h  cifar_reader.h  main.cpp
gridworld/: CMakeLists.txt  README.md  params.json
gridworld/lib/: .dummy
gridworld/src/: gridworld.cpp  gridworld.h  instructions.cpp  main.cpp
mnist/: CMakeLists.txt  brute_force_metrics.py  cassis.py  params.json
mnist/res/: brute_force_tmp.md  result_brute_force.md
mnist/src/: main.cpp  mnist.cpp  mnist.h
mnist/src/mnist_reader/: mnist_reader_less.hpp
mujoco/: CMakeLists.txt  MUJOCO_LOG.TXT  params_0.json  params_1.json  params_10.json  params_2.json  params_3.json  params_4.json  params_5.json  params_6.json  params_7.json  params_8.json  params_9.json  params_ant_0.json  params_half_cheetah_0.json  params_hopper_0.json  params_humanoid_0.json  params_inverted_double_pendulum_0.json  renderMode
mujoco/mujoco_models/: ant.xml  half_cheetah.xml  half_cheetah2.xml  hopper.xml  walker2d.xml
mujoco/scripts/: comparisonOneTask.py  dl_mujoco.sh  launchTraining.py  launch_all_experiment.py  scriptMujoco.sh  scriptMujocoOrga.sh  scriptServerMujoco.sh
mujoco/src/: cvtMapElitesArchive.cpp  cvtMapElitesArchive.h  descriptor.cpp  descriptors.h  hierachicalSelector.cpp  hierachicalSelector.h  instructions.cpp  lexicaseSelector.cpp  lexicaseSelector.h  main.cpp  mainRender.cpp  mainRender.h  mapEliteEvalRes.cpp  mapEliteEvalRes.h  mapElitesArchive.cpp  mapElitesArchive.h  mapElitesMutator.cpp  mapElitesMutator.h  mujocoMapEliteAgent.cpp  mujocoMapEliteAgent.h  multiEvaluationResults.cpp  multiEvaluationResults.h  multiLearningAgent.cpp  multiLearningAgent.h
mujoco/src/mujocoEnvironment/: mujocoAntWrapper.cpp  mujocoAntWrapper.h  mujocoDoublePendulumWrapper.cpp  mujocoDoublePendulumWrapper.h  mujocoHalfCheetahWrapper.cpp  mujocoHalfCheetahWrapper.h  mujocoHopperWrapper.cpp  mujocoHopperWrapper.h  mujocoHumanoidWrapper.cpp  mujocoHumanoidWrapper.h  mujocoReacherWrapper.cpp  mujocoReacherWrapper.h  mujocoWalker2DWrapper.cpp  mujocoWalker2DWrapper.h  mujocoWrapper.cpp  mujocoWrapper.h  mujocoWrappers.h  multiMujocoWrapper.cpp  multiMujocoWrapper.h
pendulum/: CMakeLists.txt  README.md  params.json
pendulum/dat/: download_dat.sh
pendulum/lib/: ReadMe.md  windows_download_visual_libs.sh
pendulum/lib/cmake_modules/: FindSDL2_image.cmake
pendulum/src/: main.cpp  pendulum.cpp  pendulum.h  render.c  render.cpp  render.h
pendulum/src/CodeGen/: ImportGraphPendulum.cpp  InfGenPendulum.cpp  Pendulum_out_best.dot  externHeader.h  mainCodeGenCompile.cpp  mainCodeGenInference.cpp  mainTPGInference.cpp
pendulum/src/Learn/: instructions.cpp  main.cpp  pendulum.cpp  pendulum.h  render.cpp  render.h
sfml-flappy-bird/: CMakeLists.txt  README.md  params.json
sfml-flappy-bird/src/: FB_base.cpp  Flappy.cpp  Flappy.h  Flappy_bird.cpp  Flappy_bird.h  Flappy_playable.cpp  Game.cpp  Game.h  Render.cpp  Render.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  flappy_bird.cpp  flappy_bird.h  main.cpp  render.cpp  render.h  test_affichage.cpp
stick-game/: CMakeLists.txt  README.md  params.json
stick-game/src/: main.cpp  resultTester.cpp  resultTester.h  stickGameAdversarial.h  stickGameWithOpponent.cpp  stickGameWithOpponent.h
stick-game/src/CodeGen/: ImportGraphStickGame.cpp  InfGenStickGame.cpp  mainCodeGenCompile.cpp  mainCodeGenInference.cpp
stick_game/: CMakeLists.txt  params.json
stick_game/src/CodeGen/: MyFunctions.h  mainCodeGenCompile.cpp  mainCodeGenInference.cpp  mainTPGInference.cpp
stick_game/src/Learn/: instructions.cpp  instructions.h  main.cpp  stickGameAdversarial.cpp
stickgame/: CMakeLists.txt
stickgame/src/CodeGen/: MyFunctions.c  StickGame_out_best.dot  externHeader.h  mainCodeGenCompile.cpp  mainCodeGenInference.cpp  mainTPGInference.cpp
stickgame/src/Learn/: instructions.h  main.cpp  resultTester.cpp  stickGameAdversarial.cpp  stickGameAdversarial.h
tic-tac-toe/: CMakeLists.txt  README.md  params.json
tic-tac-toe/src/: TicTacToe.cpp  TicTacToe.h  main.cpp  resultTester.cpp
tic-tac-toe/src/CodeGen/: ImportGraphTicTacToe.cpp  InfGenTicTacToe.cpp  TicTacToe_out_best.dot  mainCodeGenCompile.cpp  mainCodeGenInference.cpp
tic-tac-toe/src/Learn/: TicTacToe.cpp  TicTacToe.h  main.cpp  resultTester.cpp  resultTester.h
